Add media queries .scss to bottom of imports

--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -1,3 +1,4 @@
+@use 'variabler' as variabler;
 /* CSS for IE 11 og 10 */
 @media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
   .wrapper {
@@ -27,16 +28,41 @@
 }
 
 @media (min-width: 700px) {
-  .main-nav li:first-of-type {
-    border-left: none;
-  }
 
-  .main-nav li {
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-  }
+  .main-nav {
+    background: variabler.$dark;
+  
+    ul {
+      display: grid;
+      grid-gap: 20px;
+      padding: 0px 20px 0px 20px;
+      list-style: none;
+      grid-template-columns: repeat(4, 1fr);
+    }
+
+    li {
+      border-left: 1px solid rgba(255, 255, 255, 0.5);
+    }
+
+    li:first-of-type {
+      border-left: none;
+    }
+  } 
 }
 
 @media (max-width: 700px) {
+
+  .main-nav {
+    a {	
+      border: 1px solid variabler.$light;
+    }
+  
+    ul {
+     
+      grid-template-columns: 1fr;
+    }
+  }
+
   .bokser {
     display: grid;
     grid-gap: 20px;
