--- a/scss/mixins/_navigering.scss
+++ b/scss/mixins/_navigering.scss
@@ -8,7 +8,7 @@
     grid-gap: 20px;
     padding: 0px 20px 0px 20px;
     list-style: none;
-    grid-template-columns: repeat(4, 1fr);
+    //grid-template-columns: repeat(4, 1fr);
   }
 
   a {
