--- a/scss/styles.css
+++ b/scss/styles.css
@@ -1,125 +1,4 @@
 @charset "UTF-8";
-/* CSS for IE 11 og 10 */
-@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
-  .wrapper {
-    display: none !important;
-  }
-
-  .ieonly {
-    display: block !important;
-    text-align: center;
-  }
-}
-@media (min-width: 851px) {
-  .bokser {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr 1fr;
-  }
-}
-@media (max-width: 850px) {
-  .bokser {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr;
-  }
-}
-@media (min-width: 700px) {
-  .main-nav li:first-of-type {
-    border-left: none;
-  }
-
-  .main-nav li {
-    border-left: 1px solid rgba(255, 255, 255, 0.5);
-  }
-}
-@media (max-width: 700px) {
-  .bokser {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: repeat(1, 1fr);
-  }
-
-  .showcase {
-    -webkit-box-align: center !important;
-        -ms-flex-align: center !important;
-            align-items: center !important;
-  }
-
-  .main-nav {
-    background: none;
-  }
-
-  .topp-kontainer {
-    grid-template-areas: "showcase showcase" "top-box-a top-box-a" !important;
-  }
-
-  .top-box-a {
-    grid-template-columns: 1fr;
-  }
-
-  .top-box-a a {
-    padding: 15px;
-  }
-
-  .showcase h1 {
-    font-size: 2.5rem;
-  }
-
-  .main-nav ul {
-    grid-template-columns: 1fr;
-  }
-
-  .info {
-    grid-template-columns: 1fr;
-  }
-
-  .info .btn {
-    display: block;
-    text-align: center;
-    margin: auto;
-  }
-
-  .portfolio {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr;
-  }
-}
-@media (max-width: 500px) {
-  .main-nav {
-    background: none;
-  }
-
-  .portfolio {
-    display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr;
-  }
-
-  .topp-kontainer {
-    grid-template-areas: "showcase" "top-box-a" !important;
-  }
-
-  .top-box-a a {
-    padding: 15px;
-  }
-
-  .top-box-a {
-    grid-template-columns: 1fr;
-  }
-
-  .showcase h1,
-.showcase p {
-    text-align: center;
-  }
-
-  .showcase {
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-  }
-}
 /* CSS for Scrollmagic  */
 .reveal {
   opacity: 0;
@@ -144,7 +23,6 @@
   grid-gap: 20px;
   padding: 0px 20px 0px 20px;
   list-style: none;
-  grid-template-columns: repeat(4, 1fr);
 }
 .main-nav a {
   background: #0e0800;
@@ -160,6 +38,7 @@
 /* Portefølje */
 .portfolio-header h4 {
   text-align: center;
+  padding: 10px;
 }
 
 .portfolio-content {
@@ -264,6 +143,162 @@ footer {
           justify-content: center;
 }
 
+/* Top Box */
+.top-box {
+  background: #0d324d;
+  text-align: center;
+  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
+          box-shadow: rgba(104, 104, 104, 0.8);
+  padding: 1.5rem;
+}
+.top-box p {
+  text-align: left;
+}
+.top-box .price {
+  font-size: 2.5rem;
+}
+
+.top-box-a a {
+  color: #fff;
+}
+
+/* CSS for IE 11 og 10 */
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .wrapper {
+    display: none !important;
+  }
+
+  .ieonly {
+    display: block !important;
+    text-align: center;
+  }
+}
+@media (min-width: 851px) {
+  .bokser {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr 1fr;
+  }
+}
+@media (max-width: 850px) {
+  .bokser {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+  }
+}
+@media (min-width: 700px) {
+  .main-nav {
+    background: #0e0800;
+  }
+  .main-nav ul {
+    display: grid;
+    grid-gap: 20px;
+    padding: 0px 20px 0px 20px;
+    list-style: none;
+    grid-template-columns: repeat(4, 1fr);
+  }
+  .main-nav li {
+    border-left: 1px solid rgba(255, 255, 255, 0.5);
+  }
+  .main-nav li:first-of-type {
+    border-left: none;
+  }
+}
+@media (max-width: 700px) {
+  .main-nav a {
+    border: 1px solid #9da2ab;
+  }
+  .main-nav ul {
+    grid-template-columns: 1fr;
+  }
+
+  .bokser {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: repeat(1, 1fr);
+  }
+
+  .showcase {
+    -webkit-box-align: center !important;
+        -ms-flex-align: center !important;
+            align-items: center !important;
+  }
+
+  .main-nav {
+    background: none;
+  }
+
+  .topp-kontainer {
+    grid-template-areas: "showcase showcase" "top-box-a top-box-a" !important;
+  }
+
+  .top-box-a {
+    grid-template-columns: 1fr;
+  }
+
+  .top-box-a a {
+    padding: 15px;
+  }
+
+  .showcase h1 {
+    font-size: 2.5rem;
+  }
+
+  .main-nav ul {
+    grid-template-columns: 1fr;
+  }
+
+  .info {
+    grid-template-columns: 1fr;
+  }
+
+  .info .btn {
+    display: block;
+    text-align: center;
+    margin: auto;
+  }
+
+  .portfolio {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+  }
+}
+@media (max-width: 500px) {
+  .main-nav {
+    background: none;
+  }
+
+  .portfolio {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+  }
+
+  .topp-kontainer {
+    grid-template-areas: "showcase" "top-box-a" !important;
+  }
+
+  .top-box-a a {
+    padding: 15px;
+  }
+
+  .top-box-a {
+    grid-template-columns: 1fr;
+  }
+
+  .showcase h1,
+.showcase p {
+    text-align: center;
+  }
+
+  .showcase {
+    -webkit-box-align: center;
+        -ms-flex-align: center;
+            align-items: center;
+  }
+}
 /* Effekter */
 .fade {
   -webkit-transition: background-color 500ms;
@@ -350,34 +385,7 @@ img {
   color: #fff;
 }
 
-/* Top Box */
-.top-box {
-  background: #0d324d;
-  /*display: grid;
-  align-items: center;
-  justify-items: center;*/
-  text-align: center;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
-  padding: 1.5rem;
-}
-.top-box p {
-  text-align: left;
-}
-.top-box .price {
-  font-size: 2.5rem;
-}
-
-.top-box-a a {
-  color: #fff;
-}
-
 /* Bokser */
-.bokser {
-  /*display: grid;
-    grid-gap: 20px;
-    grid-template-columns: 1fr 1fr;*/
-}
 .bokser .fab {
   padding: 10px;
 }
