--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -97,7 +97,10 @@ img {
   background: variabler.$primary;
   text-align: center;
   padding: 1.5rem 2rem;
-  box-shadow: variabler.$shadow;
+  //box-shadow: variabler.$shadow;
+  -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
 .boks p {
