--- a/scss/styles.css
+++ b/scss/styles.css
@@ -147,8 +147,8 @@ footer {
 .top-box {
   background: #0d324d;
   text-align: center;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
   padding: 1.5rem;
 }
 .top-box p {
@@ -406,8 +406,8 @@ img {
   background: #0d324d;
   text-align: center;
   padding: 1.5rem 2rem;
-  -webkit-box-shadow: rgba(104, 104, 104, 0.8);
-          box-shadow: rgba(104, 104, 104, 0.8);
+  -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
 .boks p {
