--- a/scss/mixins/layout/_kontakt.scss
+++ b/scss/mixins/layout/_kontakt.scss
@@ -16,6 +16,9 @@
   display: flex;
   justify-content: center;
   text-align: center;
+  -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  -moz-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
 .kontakt {
