--- a/scss/styles.css
+++ b/scss/styles.css
@@ -120,6 +120,8 @@ footer {
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
+  -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
 }
 
 .kontakt {
