Minor media query tweaks
Align Les mer boxes better

--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -11,6 +11,15 @@
   }
 }
 
+/* Start media query */
+
+@media (max-width: 1639px) {
+  .portfolio .boks p {
+    text-align: left;
+    min-height: 50px;
+  }
+}
+
 @media (min-width: 851px) {
   .bokser {
     display: grid;
@@ -111,9 +120,7 @@
     grid-gap: 20px;
     grid-template-columns: 1fr;
   }
-}
 
-@media (max-width: 500px) {
   .kontakt-div {
     padding: 0px;
     min-width: 90vw;
@@ -122,12 +129,7 @@
   .kontakt-div input,
   .kontakt-div textarea {
     min-width: 230px;
-  }
-
-  .portfolio-header.reveal.visible,
-  .main-nav {
-    max-width: 90vw;
-  }
+  } 
 
   .main-nav {
     background: none;
@@ -156,5 +158,12 @@
 
   .showcase {
     align-items: center;
+  }
+}
+
+@media (max-width:500px) {
+  .portfolio-header.reveal.visible,
+  .main-nav {
+    max-width: 90vw;
   }
 }
