Increase padding around captcha

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -285,6 +285,14 @@ footer {
     min-width: 290px;
   }
 
+  .pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child {
+    margin: 20px;
+  }
+
+  .captcha {
+    padding: 15px;
+  }
+
   .main-nav {
     background: none;
   }
