--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -131,6 +131,14 @@
     min-width: 290px;
   }
 
+  .pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child {	
+    margin: 20px;
+  }
+  
+  .captcha {
+    padding: 15px;
+  }
+
   .main-nav {
     background: none;
   }
