--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -132,7 +132,7 @@
   }
 
   .pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child {	
-    margin: 10px;
+    margin: 15px !important;
   }
   
   .captcha {
