--- a/scss/mixins/_media_queries.scss
+++ b/scss/mixins/_media_queries.scss
@@ -131,10 +131,11 @@
     min-width: 290px;
   }
 
-  .pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child {	
+  .pure-form .pure-group input:last-child,
+  .pure-form .pure-group textarea:last-child {
     margin: 15px !important;
   }
-  
+
   .captcha {
     padding: 10px;
   }
