--- a/scss/styles.css
+++ b/scss/styles.css
@@ -285,12 +285,9 @@ footer {
     min-width: 290px;
   }
 
-  .pure-form .pure-group input:last-child, .pure-form .pure-group textarea:last-child {
+  .pure-form .pure-group input:last-child,
+.pure-form .pure-group textarea:last-child {
     margin: 15px !important;
-  }
-
-  .captcha {
-    padding: 10px;
   }
 
   .main-nav {
