--- a/scss/mixins/layout/felles/_navigering.scss
+++ b/scss/mixins/layout/felles/_navigering.scss
@@ -1,5 +1,5 @@
 /* Navigering */
-@use '../variabler' as variabler;
+@use '../../variabler' as variabler;
 .main-nav {
   background: variabler.$dark;
 
