--- a/scss/mixins/layout/forside/_top-box.scss
+++ b/scss/mixins/layout/forside/_top-box.scss
@@ -1,4 +1,4 @@
-@use '../variabler' as variabler;
+@use '../../variabler' as variabler;
 /* Top Box */
 .top-box {
   background: variabler.$primary;
