--- a/scss/mixins/layout/portefolje/_portefolje.scss
+++ b/scss/mixins/layout/portefolje/_portefolje.scss
@@ -1,5 +1,5 @@
 /* Portefølje */
-@use '../variabler' as variabler;
+@use '../../variabler' as variabler;
 .portfolio-header {
 h4 {
   text-align: center;
