--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,116 +1,25 @@
+/* Variabler, Media query og Scrollmagic */
+
+@use "mixins/media_queries";
 @use 'mixins/variabler' as variabler;
 @use "mixins/scrollmagic";
-@use "mixins/layout/navigering";
-@use "mixins/layout/portefolje";
-@use "mixins/layout/kontakt";
-@use "mixins/layout/top-box";
-@use "mixins/media_queries";
 
-/* Effekter */
-.fade {
-  transition: background-color 500ms;
-  &:hover {
-    background-color: variabler.$light;
-  }
-}
+/* Forside */
+@use "mixins/layout/forside/toppkontainer";
+@use "mixins/layout/forside/top-box";
+@use "mixins/layout/forside/showcase";
 
-* {
-  font-family: Arial, Helvetica, sans-serif; // Nødvendig etter Normalize.css
-}
+/* Felles */
 
-html {
-  box-sizing: border-box;
-  color: variabler.$text;
-  scroll-behavior: smooth;
-}
+@use "mixins/layout/felles/hoved";
+@use "mixins/layout/felles/navigering";
+@use "mixins/layout/felles/bokser";
+@use "mixins/layout/felles/effekter";
 
-body {
-  background: variabler.$text;
-  margin: 30px 50px;
-  line-height: 1.4;
-  padding: 20px; // Nødvendig etter Normalize.css
-}
+/* Portefølje */
 
-.btn {
-  background: variabler.$dark;
-  color: variabler.$text;
-  padding: 0.6rem 1.3rem;
-  text-decoration: none;
-  border: 0;
-}
+@use "mixins/layout/portefolje/portefolje";
 
-img {
-  max-width: 100%;
-}
+/* Kontaktskjema */
 
-.wrapper {
-  display: grid;
-  grid-gap: 20px;
-}
-
-/* Topp Kontainer */
-.topp-kontainer {
-  display: grid;
-  grid-gap: 20px;
-  grid-template-areas:
-    'showcase showcase showcase'
-    'showcase showcase showcase';
-}
-
-/* Showcase */
-.showcase {
-  grid-area: showcase;
-  min-height: 100px;
-  background: url(../img/background.jpg);
-  background-size: cover;
-  background-position: center;
-  padding: 3rem;
-  display: flex;
-  flex-direction: column;
-  //align-items: start;
-  align-items: center;
-  justify-content: center;
-  box-shadow: variabler.$shadow;
-
-  h2 {
-    font-size: 4rem;
-    margin-bottom: 0;
-    color: variabler.$text;
-  }
-
-  p {
-    font-size: 1.3rem;
-    margin-top: 0;
-    color: variabler.$text;
-  }
-}
-
-/* Bokser */
-.bokser {
-  .fab {
-    padding: 10px;
-  }
-}
-
-.boks {
-  background: variabler.$primary;
-  text-align: center;
-  padding: 1.5rem 2rem;
-  -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
-  -moz-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
-  box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
-}
-
-.boks p {
-  text-align: left;
-}
-
-/* Info */
-.info {
-  background: variabler.$primary;
-  box-shadow: variabler.$shadow;
-  display: grid;
-  grid-gap: 30px;
-  grid-template-columns: repeat(2, 1fr);
-  padding: 3rem;
-}
+@use "mixins/layout/kontakt/kontaktskjema";
