--- a/scss/mixins/layout/kontakt/_kontaktskjema.scss
+++ b/scss/mixins/layout/kontakt/_kontaktskjema.scss
@@ -31,3 +31,17 @@
   display: flex;
   justify-content: center;
 }
+
+/* Skjul piler fra input */
+
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type='number'] {
+  -moz-appearance: textfield;
+}
