--- a/scss/styles.css
+++ b/scss/styles.css
@@ -432,6 +432,19 @@ footer {
           justify-content: center;
 }
 
+/* Skjul piler fra input */
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
+}
+
 /* Variabler, Media query og Scrollmagic */
 /* Forside */
 /* Felles */
