Add box shadow as a variable

--- a/scss/mixins/_variabler.scss
+++ b/scss/mixins/_variabler.scss
@@ -4,3 +4,4 @@ $light: rgba(157, 162, 171, 1);
 $shadow: rgba(104, 104, 104, 0.8);
 $text: #fff;
 $bluebg: #0d324d;
+$box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
