--- a/scss/mixins/layout/felles/_bokser.scss
+++ b/scss/mixins/layout/felles/_bokser.scss
@@ -11,9 +11,9 @@
     background: variabler.$primary;
     text-align: center;
     padding: 1.5rem 2rem;
-    -webkit-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
-    -moz-box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
-    box-shadow: 5px 5px 10px 2px rgba(0, 0, 0, 0.5);
+    -webkit-box-shadow: variabler.$box-shadow;
+    -moz-box-shadow: variabler.$box-shadow;
+    box-shadow: variabler.$box-shadow;
   }
   
   .boks p {
