Improve header animations
timeline.to('.main-nav', { duration: 0.5, opacity: 1 });

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -1,16 +1,16 @@
 /* Variabler, Media query og Scrollmagic */
-@use "mixins/media_queries";
+@use "mixins/media_queries"; // Denne bør være først
 @use 'mixins/variabler' as variabler;
 @use "mixins/scrollmagic";
 
 /* Forside */
-@use "mixins/layout/forside/toppkontainer";
-@use "mixins/layout/forside/top-box";
+@use "mixins/layout/forside/toppkontainer"; 
+@use "mixins/layout/forside/top-box"; 
 @use "mixins/layout/forside/showcase";
 
 /* Felles */
 @use "mixins/layout/felles/hoved";
-@use "mixins/layout/felles/navigering";
+@use "mixins/layout/felles/navigering"; 
 @use "mixins/layout/felles/bokser";
 @use "mixins/layout/felles/effekter";
 
