Add noscript warning
<div class="noscript">Din nettleser støttter ikke Javascript.Vennligst bruk en annen nettleser for å se denne nettsiden optimalt.</div>

--- a/scss/styles.css
+++ b/scss/styles.css
@@ -239,6 +239,13 @@
   color: #fff;
 }
 
+.noscript {
+  color: #000;
+  font-size: 2rem;
+  text-align: center;
+  padding: 1rem;
+}
+
 /* Hoved */
 * {
   font-family: Arial, Helvetica, sans-serif;
