--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -7,6 +7,7 @@
 @use "mixins/layout/forside/toppkontainer"; 
 @use "mixins/layout/forside/top-box"; 
 @use "mixins/layout/forside/showcase";
+@use "mixins/layout/forside/noscript";
 
 /* Felles */
 @use "mixins/layout/felles/hoved";
