--- a/scss/styles.css
+++ b/scss/styles.css
@@ -160,8 +160,8 @@
 }
 @media (max-width: 500px) {
   .portfolio-header.reveal.visible,
-.main-nav {
-    max-width: 90vw;
+.main-nav, * {
+    max-width: 90vw !important;
   }
 }
 /* CSS for Scrollmagic  */
