--- a/scss/styles.css
+++ b/scss/styles.css
@@ -30,6 +30,12 @@
     grid-gap: 20px;
     grid-template-columns: 1fr;
   }
+
+  .portfolio {
+    display: grid;
+    grid-gap: 20px;
+    grid-template-columns: 1fr;
+  }
 }
 @media (min-width: 700px) {
   .main-nav {
@@ -160,8 +166,8 @@
 }
 @media (max-width: 500px) {
   .portfolio-header.reveal.visible,
-.main-nav, * {
-    max-width: 90vw !important;
+.main-nav {
+    max-width: 90vw;
   }
 }
 /* CSS for Scrollmagic  */
